# AstroDynamicsEngine

./: .gitignore  BarnesHut.h  CMakeLists.txt  Configuration.md  README.md  Scenarios_Galaxy_Collions.json  Solar_System.json  binary_system.json  build.bat  deploy-web.sh  main.cpp  minimal_main.cpp
docs/: astro-engine.js  index.html
